[package]
name = "cefrust"
version = "0.1.0"
authors = ["Guillermo Zunino <guillez@gmail.com>"]
build = "build.rs"

[build-dependencies]
bindgen = "0.20"
fs_extra = "0.1.0"

[dependencies]
libc = "0.2.20"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.12.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.7.0"