[package]
name = "cefrust"
version = "0.2.0"
authors = ["Guillermo Zunino <guillez@gmail.com>"]
build = "build.rs"

[features]
gen = []
genJava = []

[build-dependencies]
bindgen = "0.31.3"
fs_extra = "1.0.0"
java_bindgen = { git = "https://github.com/maketechnology/java-bindgen", branch = "java-bindgen" }
#java_bindgen = { path = "../java-bindgen" }

[dependencies]
libc = "0.2.21"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.13.0"

[target.'cfg(unix)'.dependencies]
nix = "0.8.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"

[target.'cfg(target_os = "macos")'.dependencies]
